TCP-1365: Adding GC options for driver side
Former-commit-id: 951a2d1454181d80359360fbc36209052647ba4c